--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.109.0",
+    "@aws-cdk/aws-s3": "1.109.0",
     "@aws-cdk/cloud-assembly-schema": "1.109.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
